--- a/PCA_under_fattails.ipynb
+++ b/PCA_under_fattails.ipynb
@@ -18,12 +18,12 @@
         "id": "IUAHi2Pqemrw"
       },
       "source": [
-        "###Nel bel libro di Nassim Taleb dal titolo \"Statistical consequences of fat tails\" tra le conseguenze della presenza di una distribuzione a code spesse è che al teorema del limite centrale occorrono troppi campioni per verificare l'ipotesi di non correlazione. Se utilizziamo la classica analisi delle componenti principali (PCA) in un EDA magari per ridurre le features potremmo andare in contro ad un errore clamoroso!\n",
+        "####Nel bel libro di Nassim Taleb dal titolo \"Statistical consequences of fat tails\" tra le conseguenze della presenza di una distribuzione a code spesse è che al teorema del limite centrale occorrono troppi campioni per verificare l'ipotesi di non correlazione. Se utilizziamo la classica analisi delle componenti principali (PCA) in un EDA magari per ridurre le features potremmo andare in contro ad un errore clamoroso!\n",
         "\n",
-        "###Per capire meglio il fenomeno facciamo un esempio: supponiamo di avere un una variabile con 30 features, ossia un vettore di dimensione 30. Se dobbiamo creare un modello per classificazione o regressione è naturale cercare di ridurre la dimensione del vettore con una PCA; cosa succede se le variabili sono incorrelate? Tecnicamente dovremmo avere un expected_variance_ratio uguale per ogni componente. \n",
+        "####Per capire meglio il fenomeno facciamo un esempio: supponiamo di avere un una variabile con 30 features, ossia un vettore di dimensione 30. Se dobbiamo creare un modello per classificazione o regressione è naturale cercare di ridurre la dimensione del vettore con una PCA; cosa succede se le variabili sono incorrelate? Tecnicamente dovremmo avere un expected_variance_ratio uguale per ogni componente. \n",
         "\n",
         "---\n",
-        "###Supponiamo di creare 2 dataset con le componententi incorrelate, uno di 100 osservazioni ed uno con 10000 osservazioni ed eseguiamo una PCA: "
+        "####Supponiamo di creare 2 dataset con le componententi incorrelate, uno di 100 osservazioni ed uno con 10000 osservazioni ed eseguiamo una PCA: "
       ]
     },
     {
